# kubevpn

./: Cargo.toml
crates/kubectl-vpn/: Cargo.toml
crates/kubectl-vpn/src/: main.rs
crates/kubevpnd/: Cargo.toml
crates/kubevpnd/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: device.rs  lib.rs  tunnel.rs
