[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
# Use commit with public device mod
boringtun = { git = "https://github.com/cloudflare/boringtun.git", rev = "f824287" }
log = "0.4"
